infrastructure/kubernetes/mongodb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: squidcode-mongo
  namespace: apps
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: squidcode-mongo
  template:
    metadata:
      labels:
        app: squidcode-mongo
    spec:
      containers:
        - name: mongo
          image: mongo:7
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: data
              mountPath: /data/db
          resources:
            requests:
              memory: "256Mi"
              cpu: "50m"
            limits:
              memory: "768Mi"
              cpu: "700m"
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: squidcode-mongo-data
---
apiVersion: v1
kind: Service
metadata:
  name: squidcode-mongo
  namespace: apps
spec:
  type: ClusterIP
  selector:
    app: squidcode-mongo
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
